# Starlight

./: .gitignore  CMakeLists.txt  License.md  Readme.md  main.cpp
Assets/Icon/: Resources.aps  Resources.rc
Include/: Errors.h  Gpu.h  Logger.h  Memory.h  Profiler.h  Utility.h  Window.h
Source/: Gpu.cpp  Logger.cpp  Memory.cpp  Profiler.cpp  Window.cpp  main.cpp
